--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,6 @@ plugins:
 permalink:      /:year-:month-:day/:title
 paginate:       5
 
-truncatewords: 50
-
-excerpt_separator: "<!--more-->"
+excerpt_separator: <!--more-->
 
 encoding: utf8
